src/objects/Partner_Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Organisations</relationshipLabel>
        <relationshipName>DF_Partner_Organisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_User_Name__c</fullName>
        <description>The User Name for the admin user when the organisation was registered</description>
        <label>Admin User Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFC_Code__c</fullName>
        <label>DFC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>The email domain for this organisation</description>
        <label>Email Domain</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_purpose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal purpose only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Friends_Created__c</fullName>
        <label>ZZNumber Of Friends Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Friends_Created_by_Champions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Of Friends Created by Champions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Offline_Friends_Created__c</fullName>
        <label>Number Of Offline Friends Created</label>
        <summarizedField>Partner_Organisation_Event__c.Participant_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Partner_Organisation_Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Offline Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Organisation_Event__c.Partner_Organisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Online_Friends_Created__c</fullName>
        <label>Number Of Online Friends Created</label>
        <summarizedField>Partner_Organisation_Event__c.Participant_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Partner_Organisation_Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Online Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Organisation_Event__c.Partner_Organisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Champions_Identified__c</fullName>
        <label>Number of Champions Identified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-250</fullName>
                </value>
                <value>
                    <fullName>251-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>5001-20000</fullName>
                </value>
                <value>
                    <fullName>20001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_friends_by_org_sessions__c</fullName>
        <label>Number Of Friends by Org Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offline_routes__c</fullName>
        <label>Offline routes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>Downloaded Videos</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Recognised provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Partner External Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>update to picklist values must update DF_WEBC_RegisterOrg component selectlist values and partner resources-category field</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health &amp; Social Care</fullName>
                </value>
                <value>
                    <fullName>Local Authority</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Public Service</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Sport &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Power &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Allied Healthcare Professionals</fullName>
                </value>
                <value>
                    <fullName>Other(please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_other__c</fullName>
        <label>Sector - other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Friends_Created__c</fullName>
        <formula>Total_Number_Of_Friends_by_Champions__c +Number_Of_Offline_Friends_Created__c +Number_Of_Online_Friends_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number Of Friends Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Friends_by_Champions__c</fullName>
        <formula>Number_Of_Friends_Created_by_Champions__c +  Number_of_friends_by_org_sessions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number Of Friends by Champions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Organisation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DFC_Code__c</columns>
        <columns>Admin_User_Name__c</columns>
        <columns>Number_of_Employees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Organisation_Web_Site_Registrations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Admin_User_Name__c</columns>
        <columns>DFC_Code__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Dementia Friends Site Guest User</value>
        </filters>
        <label>Organisation Web Site Registrations</label>
    </listViews>
    <listViews>
        <fullName>Partner_Organisations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>DFC_Code__c</columns>
        <columns>Admin_User_Name__c</columns>
        <columns>Email_Domain__c</columns>
        <columns>Number_of_Employees__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Partner Organisations</label>
    </listViews>
    <nameField>
        <label>Partner Organisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Organisations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>